dark mode toggle. and minor fixes on various sections

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,13 +8,29 @@
 
 }
 
-html{
-  scroll-snap-type: y proximity;
+
+::selection {
+  @apply bg-red-200
 }
 
-body.dark{
-  --primary: black;
+::-webkit-scrollbar {
+ @apply w-1 
 }
+
+::-webkit-scrollbar-thumb {
+  border: 2px solid var(--background-start-rgb);
+  @apply bg-amber-600 rounded-2xl 
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-blue-100 dark:bg-slate-950 
+}
+
+html{
+  @apply snap-y snap-proximity
+}
+
+
 
 .btn {
   @apply capitalize px-5 py-2 border ring-1 ring-black dark:invert rounded-xl text-black bg-white hover:bg-black hover:text-white duration-300;
@@ -22,4 +38,49 @@ body.dark{
 
 .btn-alt {
   @apply capitalize px-5 py-2 ring-1 ring-black dark:invert rounded-xl bg-black  text-white hover:bg-white  hover:text-black duration-300;
+}
+
+
+.dark{
+  --primary: black;
+  background-color: #52527a;
+}
+
+.toggleBtn {
+  height: 40px;
+  width: 100px;
+  background-image: radial-gradient(circle farthest-corner at 10% 20%, 
+                    rgba(253,203,50,1) 0%, 
+                    rgba(244,56,98,1) 100.2%);
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 0 5px;
+  cursor: pointer;
+  transition: all .3s;
+}
+.handle {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  background-color: #fff;
+  overflow: hidden;
+}
+.icon {
+  color: #f88748;
+}
+
+.dark .toggleBtn  {
+  background-color: #52527a;
+  background-image: linear-gradient(109.8deg,
+                    rgba(62,5,116,1) -5.2%, 
+                    rgba(41,14,151,1) -5.2%, 
+                    rgba(216,68,148,1) 103.3%);
+}
+.dark .icon {
+  color: #501a96;
 }
